<resources>
    <string name="app_name">Pack Pack Monsters</string>
    <string name="pack_pack_activity_title">PackDex</string>
    <string name="battle_activity_title">Battle</string>
    <string name="items_activity_title">Items</string>
    <string name="help_activity_title">Help</string>

    <string name="navigation_drawer_open">Opening navigation drawer.</string>
    <string name="navigation_drawer_close">Closing navigation drawer.</string>

    <string name="fight">Fight</string>
    <string name="items">Items</string>
    <string name="run">Run</string>
    <string name="party">Party</string>
    <string name="health">Health</string>
    <string name="enemy_health">Enemy Health</string>
    <string name="enemy">Enemy</string>
    <string name="health_shorthand_with_colon">HP:</string>
    <string name="base_health_with_colon">Base Health:</string>
    <string name="moves_underlined"><u>Moves</u></string>
    <string name="faq">Help</string>
    <string name="battle">Battle</string>
    <string name="pack">Pack Pack</string>
    <string name="packdex">PackDex</string>
    <string name="home">Home</string>
    <string name="stats_underlined"><u>Stats</u></string>
    <string name="wins_with_colon">Wins:</string>
    <string name="losses_with_colon">Losses:</string>
    <string name="surrenders_with_colon">Surrenders:</string>
    <string name="type_with_colon">Type:</string>
    <string name="type">Type</string>
    <string name="description_with_underline"><u>Description</u></string>
    <string name="damage_with_colon">Damage:</string>

    <string name="fire_types_underlined"><u>Fire Types</u></string>
    <string name="earth_types_underlined"><u>Earth Types</u></string>
    <string name="air_types_underlined"><u>Air Types</u></string>
    <string name="water_types_underlined"><u>Water Types</u></string>
    <!--<string name="fire_types">Fire Types</string>
    <string name="earth_types">Earth Types</string>
    <string name="air_types">Air Types</string>
    <string name="water_types">Water Types</string>-->

    <string name="bullet">&#8226;</string>
    <string name="forward_slash">/</string>

    <string name="default_type_text">-</string>
    <string name="default_health_text">-</string>
    <string name="default_move_text">Move</string>
    <string name="default_move_description">-</string>
    <string name="default_damage_text">-</string>
    <string name="default_stat_text">-</string>
    <string name="default_item_name">Item</string>
    <string name="default_item_description">Description</string>
    <string name="default_hello_message">Hello</string>

    <string name="welcome_message">Welcome to\nPack Pack Monsters!</string>
    <string name="name_edit_hint">Enter your name.</string>
    <string name="name_txt_label">What is your name?</string>

    <string name="help_type_faq"><u>What are the typing strengths?</u></string>

    <string name="fire_against_fire">Fire &lt; Fire</string>
    <string name="fire_against_earth">Fire &gt; Earth</string>
    <string name="fire_against_air">Fire is neutral against air.</string>
    <string name="fire_against_water">Fire &lt; Water</string>
    <string name="earth_against_fire">Earth &lt; Fire</string>
    <string name="earth_against_earth">Earth &lt; Earth</string>
    <string name="earth_against_air">Earth &gt; Air</string>
    <string name="earth_against_water">Earth is neutral against water.</string>
    <string name="air_against_fire">Air is neutral against fire.</string>
    <string name="air_against_earth">Air &lt; Earth</string>
    <string name="air_against_air">Air &lt; Air</string>
    <string name="air_against_water">Air &gt; Water</string>
    <string name="water_against_fire">Water &gt; Fire</string>
    <string name="water_against_water">Water &lt; Water</string>
    <string name="water_against_earth">Water is neutral against earth.</string>
    <string name="water_against_air">Water &lt; Air</string>

    <!--<string name="fire_against_fire">Fire is not very effective against fire.</string>
    <string name="fire_against_earth">Fire is super effective against earth.</string>
    <string name="fire_against_air">Fire is neutral against air.</string>
    <string name="fire_against_water">Fire is not very effective against water.</string>
    <string name="earth_against_fire">Earth is not very effective against fire.</string>
    <string name="earth_against_earth">Earth is not very effective against earth.</string>
    <string name="earth_against_air">Earth is super effective against air.</string>
    <string name="earth_against_water">Earth is neutral against water.</string>
    <string name="air_against_fire">Air is neutral against fire.</string>
    <string name="air_against_earth">Air is not very effective against earth.</string>
    <string name="air_against_air">Air is not very effective against air.</string>
    <string name="air_against_water">Air is super effective against water.</string>
    <string name="water_against_fire">Water is super effective against fire.</string>
    <string name="water_against_water">Water is not very effective against water.</string>
    <string name="water_against_earth">Water is neutral against earth.</string>
    <string name="water_against_air">Water is not very effective against air.</string>-->

    <string name="ele_gen">Ele Gen</string>
    <string name="gen">Gen</string>
    <string name="sp">SP</string>
    <string name="sp_2">SP 2</string>

    <string name="victory_text">You\nWon!</string>
    <string name="lose_text">You\nLost...</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="revive">Revive</string>
    <string name="finish_him">Finish Him</string>
    <string name="heal_and_deal">Heal and Deal</string>
</resources>
