<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_txt_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/name_txt_margin_top"
        android:text="@string/welcome_message"
        android:textColor="@android:color/black"
        android:textSize="@dimen/name_txt_text_size"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/name_txt_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_txt_label"
        android:textColor="@android:color/black"
        android:textSize="@dimen/name_txt_text_size"
        android:layout_marginTop="@dimen/name_txt_margin_top"
        app:layout_constraintTop_toBottomOf="@id/name_txt_welcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <EditText
        android:id="@+id/name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/name_edit_hint"
        android:textColor="@android:color/black"
        android:textSize="@dimen/name_edit_text_size"
        android:layout_marginTop="@dimen/name_edit_margin_top"
        android:imeOptions="actionDone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_txt_label"/>

</android.support.constraint.ConstraintLayout>